# dotnet-gitversion-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  docker-compose.yml
examples/: Cargo.toml  build.rs
examples/src/: gitversion.rs
gitversion-build/: Cargo.toml
gitversion-build/src/: gitversion.rs  lib.rs
