[package]
name = "dotnet-gitversion-build"
version = "0.3.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"
description = "Provides Semantic Versioning at build time using dotnet-gitversion"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/sunsided/dotnet-gitversion-rs"
keywords = ["build", "commit", "datetime", "gitversion", "semver"]
categories = ["development-tools::build-utils"]

[dependencies]
anyhow = "1.0.41"
serde_json = "1.0.64"
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"] }
quote = "1.0.9"
